[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalmlp"
version = "1.0.0"
description = "Advanced Hybrid Causal Discovery Model combining DECI and GraN-DAG"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "CausalMLP Contributors", email = "your.email@example.com"}
]
keywords = [
    "causal-discovery",
    "causal-inference", 
    "dag-learning",
    "structure-learning",
    "deep-learning",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
full = [
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "networkx>=2.6.0",
    "tqdm>=4.60.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.990",
    "isort>=5.10.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/CausalMLP"
Documentation = "https://github.com/yourusername/CausalMLP#readme"
Repository = "https://github.com/yourusername/CausalMLP"
Issues = "https://github.com/yourusername/CausalMLP/issues"

[project.scripts]
causalmlp-train = "train:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=causalmlp --cov-report=term-missing"
